--- a/scenarioNodes/sendMqtt.html
+++ b/scenarioNodes/sendMqtt.html
@@ -11,44 +11,42 @@
   limitations under the License.
 -->
 
-<script type="text/html" data-template-name="onFiveMinute">
+<script type="text/html" data-template-name="send mqtt msg">
     <div class="form-row">
         <label for="node-input-broker"><i class="fa fa-globe"></i> <span data-i18n="mqtt.label.broker"></span></label>
         <input type="text" id="node-input-broker">
     </div>
-</script>
-
-<script type="text/x-red" data-help-name="onFiveMinute">
-    <p>Triggers every five full real time minutes</p>
+    <div class="form-row">
+        <label for="node-input-topic"><i class="fa fa-tasks"></i> <span data-i18n="common.label.topic"></span></label>
+        <input type="text" id="node-input-topic" data-i18n="[placeholder]common.label.topic">
+    </div>
+    <div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> <span data-i18n="common.label.name"></span></label>
+        <input type="text" id="node-input-name" data-i18n="[placeholder]common.label.name">
+    </div>
+    <div class="form-tips"><span data-i18n="mqtt.tip"></span></div>
 </script>
 
 <script type="text/javascript">
-    RED.nodes.registerType('onFiveMinute',{
-        category: 'events',
+    RED.nodes.registerType('send mqtt msg',{
+        category: 'network',
         defaults: {
-        	broker: {value: "localhost", type:"alice-mqtt-broker"}
-		},
-		name:"onFiveMinute",
+            name: {value:""},
+            topic: {value:""}
+        },
+		retain:false,
 		qos:"2",
-		datatype:"auto",
-		topic:"projectalice/events/onfiveminute",
+		broker:"localhost",
         color:"#d8bfd8",
-        inputs:0,
-        outputs:1,
+        inputs:1,
+        outputs:0,
         icon: "bridge.svg",
+        align: "right",
         label: function() {
-            return this.name;
+            return this.name||this.topic||"mqtt";
         },
         labelStyle: function() {
             return this.name?"node_label_italic":"";
-        },
-        oneditprepare: function() {
-            if (this.qos === undefined) {
-                $("#node-input-qos").val("2");
-            }
-            if (this.datatype === undefined) {
-                $("#node-input-datatype").val("auto");
-            }
         }
     });
 </script>
