--- a/scenarioNodes/aliceMqtt.html
+++ b/scenarioNodes/aliceMqtt.html
@@ -3,21 +3,19 @@
 	It's been fitted to our needs of simplicity for everyday use and repackaged
 -->
 
-<script type="text/html" data-template-name="mqtt-broker">
+<script type="text/html" data-template-name="aliceMqtt">
 	<div class="form-row">
-		<label for="node-config-input-name"><i class="fa fa-tag"></i> <span data-i18n="common.label.name"></span></label>
-		<input type="text" id="node-config-input-name" data-i18n="[placeholder]common.label.name">
+		<ul style="min-width: 600px; margin-bottom: 20px;" id="node-config-aliceMqtt-tabs"></ul>
 	</div>
-	<div class="form-row">
-		<ul style="min-width: 600px; margin-bottom: 20px;" id="node-config-mqtt-broker-tabs"></ul>
-	</div>
-	<div id="node-config-mqtt-broker-tabs-content" style="min-height:150px;">
-		<div id="mqtt-broker-tab-connection" style="display:none">
+	<div id="node-config-aliceMqtt-tabs-content" style="min-height: 150px;">
+		<div id="aliceMqtt-tab-connection" style="display: none">
 			<div class="form-row node-input-broker">
 				<label for="node-config-input-broker"><i class="fa fa-globe"></i> Host</label>
-				<input type="text" id="node-config-input-broker" style="width:40%;" placeholder="localhost">
-				<label for="node-config-input-port" style="margin-left:20px; width:43px; "> Port</label>
-				<input type="text" id="node-config-input-port" placeholder="1883">
+				<input type="text" id="node-config-input-broker" style="width: 40%;" placeholder="localhost">
+			</div>
+			<div class="form-row">
+				<label for="node-config-input-port"><i class="fa fa-globe"></i> Port</label>
+				<input type="text" id="node-config-input-port" style="width: 60px;" placeholder="1883">
 			</div>
 			<div class="form-row">
 				<input type="checkbox" id="node-config-input-usetls" style="display: inline-block; width: auto; vertical-align: top;">
@@ -27,7 +25,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="mqtt-broker-tab-security" style="display:none">
+		<div id="aliceMqtt-tab-security" style="display:none">
 			<div class="form-row">
 				<label for="node-config-input-user"><i class="fa fa-user"></i> User</label>
 				<input type="text" id="node-config-input-user">
@@ -41,66 +39,79 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('mqtt-broker', {
+	RED.nodes.registerType('aliceMqtt', {
 		category     : 'config',
 		defaults     : {
-			name            : {value: ""},
-			broker          : {value: "", required: true},
-			port            : {value: 1883, required: false, validate: RED.validators.number(true)},
-			tls             : {type: "tls-config", required: false},
-			usetls          : {value: false},
-			verifyservercert: {value: false}
+			broker          : {
+				value   : 'localhost',
+				required: true
+			},
+			port            : {
+				value   : 1883,
+				required: false,
+				validate: RED.validators.number(true)
+			},
+			tls             : {
+				type: 'tls-config'
+			},
+			usetls          : {
+				value: false
+			},
+			verifyservercert: {
+				value: false
+			}
 		},
 		credentials  : {
-			user    : {type: "text"},
-			password: {type: "password"}
+			user    : {
+				type: 'text'
+			},
+			password: {
+				type: 'password'
+			}
 		},
 		label        : 'AliceMqtt',
 		oneditprepare: function () {
 			let tabs = RED.tabs.create({
-				id      : "node-config-mqtt-broker-tabs",
+				id      : 'node-config-aliceMqtt-tabs',
 				onchange: function (tab) {
-					$("#node-config-mqtt-broker-tabs-content").children().hide();
-					$("#" + tab.id).show();
+					$('#node-config-aliceMqtt-tabs-content').children().hide();
+					$('#' + tab.id).show();
 				}
 			});
 			tabs.addTab({
-				id   : "mqtt-broker-tab-connection",
-				label: this._("mqtt.tabs-label.connection")
+				id   : 'aliceMqtt-tab-connection',
+				label: this._('mqtt.tabs-label.connection')
 			});
 			tabs.addTab({
-				id   : "mqtt-broker-tab-security",
-				label: this._("mqtt.tabs-label.security")
+				id   : 'aliceMqtt-tab-security',
+				label: this._('mqtt.tabs-label.security')
 			});
 
 			setTimeout(function () {
 				tabs.resize();
 			}, 0);
-			if (typeof this.cleansession === 'undefined') {
-				this.cleansession = true;
-				$("#node-config-input-cleansession").prop("checked", true);
-			}
+
 			if (typeof this.usetls === 'undefined') {
 				this.usetls = false;
-				$("#node-config-input-usetls").prop("checked", false);
+				$('#node-config-input-usetls').prop('checked', false);
 			}
 
 			function updateTLSOptions() {
-				if ($("#node-config-input-usetls").is(':checked')) {
-					$("#node-config-row-tls").show();
+				if ($('#node-config-input-usetls').is(':checked')) {
+					$('#node-config-row-tls').show();
 				} else {
-					$("#node-config-row-tls").hide();
+					$('#node-config-row-tls').hide();
 				}
 			}
 
 			updateTLSOptions();
-			$("#node-config-input-usetls").on("click", function () {
+			$('#node-config-input-usetls').on('click', function () {
 				updateTLSOptions();
 			});
 		},
 		oneditsave   : function () {
-			if (!$("#node-config-input-usetls").is(':checked')) {
-				$("#node-config-input-tls").val("");
+			if (!$('#node-config-input-usetls').is(':checked')) {
+				$('#node-config-input-tls').val('');
 			}
 		}
 	});
