--- a/scenarioNodes/onAliceEvent.html
+++ b/scenarioNodes/onAliceEvent.html
@@ -10,7 +10,7 @@
 		color   : '#3FADB5',
 		defaults: {
 			broker: {
-				type    : 'mqtt-broker',
+				type    : 'aliceMqtt',
 				required: true
 			},
 			event : {
