--- a/scenarioNodes/aliceMqtt.html
+++ b/scenarioNodes/aliceMqtt.html
@@ -5,26 +5,26 @@
 
 <script type="text/html" data-template-name="aliceMqtt">
 	<div class="form-row node-input-broker">
-		<label for="node-config-input-broker"><i class="fa fa-globe"></i> Host</label>
+		<label for="node-config-input-broker"><i class="fa fa-globe fa-fw"></i> <span data-i18n="aliceMqtt.host"></span></label>
 		<input type="text" id="node-config-input-broker" style="width: 40%;" placeholder="localhost">
 	</div>
 	<div class="form-row">
-		<label for="node-config-input-port"><i class="fa fa-globe"></i> Port</label>
+		<label for="node-config-input-port"><i class="fa fa-globe fa-fw"></i> <span data-i18n="aliceMqtt.port"></span></label>
 		<input type="text" id="node-config-input-port" style="width: 60px;" placeholder="1883">
 	</div>
 	<div class="form-row">
 		<input type="checkbox" id="node-config-input-usetls" style="display: inline-block; width: auto; vertical-align: top;">
-		<label for="node-config-input-usetls" style="width: auto">Enable secure (SSL/TLS) connection</label>
+		<label for="node-config-input-usetls" style="width: auto"> <span data-i18n="aliceMqtt.useTLS"></span></label>
 		<div id="node-config-row-tls" class="hide">
 			<label style="width: auto; margin-left: 20px; margin-right: 10px;" for="node-config-input-tls"><span>TLS Configuration</span></label><input style="width: 300px;" type="text" id="node-config-input-tls">
 		</div>
 	</div>
 	<div class="form-row">
-		<label for="node-config-input-user"><i class="fa fa-user"></i> User</label>
+		<label for="node-config-input-user"><i class="fa fa-user fa-fw"></i>  <span data-i18n="node-red:common.label.username"></span></label>
 		<input type="text" id="node-config-input-user">
 	</div>
 	<div class="form-row">
-		<label for="node-config-input-password"><i class="fa fa-lock"></i> Password</label>
+		<label for="node-config-input-password"><i class="fa fa-lock fa-fw"></i>  <span data-i18n="node-red:common.label.password"></span></label>
 		<input type="password" id="node-config-input-password">
 	</div>
 </script>
