--- a/scenarioNodes/onAliceCustomEvent.html
+++ b/scenarioNodes/onAliceCustomEvent.html
@@ -9,6 +9,9 @@
 		category: 'Project Alice',
 		color   : '#3FADB5',
 		defaults: {
+			name: {
+				value: '',
+			},
 			broker: {
 				type    : 'aliceMqtt',
 				required: true
@@ -22,7 +25,7 @@
 		outputs : 1,
 		icon    : 'arrow-in.svg',
 		label   : function () {
-			return this.event || this.name;
+			return this.name || this.event ;
 		}
 	})
 </script>
@@ -34,6 +37,10 @@
 </script>
 
 <script data-template-name="onAliceCustomEvent" type="text/html">
+	<div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
 	<div class="form-row">
 		<label for="node-input-broker"><i class="fa fa-bookmark fa-fw"></i> <span data-i18n="onAliceCustomEvent.broker"></span></label>
 		<input type="text" id="node-input-broker">
