--- a/scenarioNodes/sendMsg.html
+++ b/scenarioNodes/sendMsg.html
@@ -9,6 +9,9 @@
 		category: 'Project Alice',
 		color   : '#3FADB5',
 		defaults: {
+			name: {
+				value: '',
+			},
 			broker: {
 				type    : 'aliceMqtt',
 				required: true
@@ -22,7 +25,7 @@
 		outputs : 0,
 		icon    : 'bridge.svg',
 		label   : function () {
-			return this.topic || this.name;
+			return this.name || this.topic ;
 		}
 	})
 </script>
@@ -34,6 +37,10 @@
 </script>
 
 <script type="text/html" data-template-name="sendMsg">
+	<div class="form-row">
+        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
 	<div class="form-row">
 		<label for="node-input-broker"><i class="fa fa-bookmark fa-fw"></i> <span data-i18n="sendMsg.broker"></span></label>
 		<input type="text" id="node-input-broker">
