sayRandom Node added + Alice Icon for inputs

--- a/scenarioNodes/onAliceCustomEvent.html
+++ b/scenarioNodes/onAliceCustomEvent.html
@@ -23,7 +23,7 @@
 		},
 		inputs  : 0,
 		outputs : 1,
-		icon    : 'arrow-in.svg',
+		icon    : 'Alice.png',
 		label   : function () {
 			return this.name || this.event ;
 		}
