--- a/scenarioNodes/onAliceCustomEvent.html
+++ b/scenarioNodes/onAliceCustomEvent.html
@@ -46,7 +46,7 @@
 		<input type="text" id="node-input-broker">
 	</div>
 	<div class="form-row">
-		<label for="node-input-custom-event"><i class="fa fa-tasks fa-fw"></i> <span data-i18n="onAliceCustomEvent.event"></span></label>
-		<input id="node-input-custom-event" type="text" style="width: 70%"/>
+		<label for="node-config-input-custom-event"><i class="fa fa-tasks fa-fw"></i> <span data-i18n="onAliceCustomEvent.event"></span></label>
+		<input id="node-config-input-custom-event" type="text" style="width: 70%"/>
 	</div>
 </script>
